--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.12"
 pydantic = "^2.10.4"
 elasticsearch = "^8.17.0"
 redis = "^5.2.1"
+pydantic-settings = "^2.7.1"
+openai = "^1.61.0"
 
 
 [tool.poetry.group.dev.dependencies]
