--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ elasticsearch = "^8.17.0"
 redis = "^5.2.1"
 pydantic-settings = "^2.7.1"
 openai = "^1.61.0"
+nltk = "^3.9.1"
 
 
 [tool.poetry.group.dev.dependencies]
