change the author name

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,7 @@
 	"name": "play-with-elasticsearch-redis",  // change the name here
 	"dockerComposeFile": "docker-compose.yml",
 	"service": "app",
-	"workspaceFolder": "/opt/yijunx/code",
+	"workspaceFolder": "/opt/wangyilong/code",
 	"customizations": {
 		"vscode": {
 			"settings": {
@@ -20,5 +20,5 @@
 		}
 	},
 	"postCreateCommand": "poetry install --with dev",
-	"remoteUser": "yijunx"
+	"remoteUser": "wangyilong"
 }
