--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -4,9 +4,9 @@ services:
       context: ..
       dockerfile: .devcontainer/Dockerfile
     volumes:
-      - ~/.ssh:/opt/yijunx/.ssh
-      - ../.devcontainer/zshrc:/opt/yijunx/.zshrc
-      - ..:/opt/yijunx/code
+      - ~/.ssh:/opt/wangyilong/.ssh
+      - ../.devcontainer/zshrc:/opt/wangyilong/.zshrc
+      - ..:/opt/wangyilong/code
     command: ["tail -f /dev/null"]
 
   redis:
