--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,14 @@ authors = ["wangyilong"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = ">=3.12,<3.13"
 pydantic = "^2.10.4"
 elasticsearch = "^8.17.0"
 redis = "^5.2.1"
 pydantic-settings = "^2.7.1"
 openai = "^1.61.0"
 nltk = "^3.9.1"
+spacy = "^3.8.4"
 
 
 [tool.poetry.group.dev.dependencies]
