--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,10 @@ pydantic-settings = "^2.7.1"
 openai = "^1.61.0"
 nltk = "^3.9.1"
 spacy = "^3.8.4"
+transformers = "^4.48.2"
+pandas = "^2.2.3"
+sentence-transformers = "^3.4.1"
+faiss-cpu = "^1.10.0"
 
 
 [tool.poetry.group.dev.dependencies]
